--- a/views/viewCampaigns.html
+++ b/views/viewCampaigns.html
@@ -24,11 +24,11 @@
         <thead>
             <th class="announcement">Message Id</th>
             <th class="announcement">Campaign Name</th>
-            <th class="announcement">Message Type</th>
+            <th class="announcement">Sender</th>
             <th class="announcement">Valid From</th>
             <th class="announcement">Valid Till</th>
             <th class="announcement">AppCode</th>
-            <th class="announcement">User Region</th>
+            <th class="announcement">Region</th>
             <th class="announcement">Created On</th>
             <th class="announcement">Messages Sent</th>
             <th class="announcement" colspan="2" ng-hide="state.campaignState=='completed' || state.campaignState=='stopped'">Action</th>
@@ -41,13 +41,13 @@
                 <td class="announcement">{{data.validFrom | date:'dd-MM-yyyy HH:mm a'}}</td>
                 <td class="announcement">{{data.validTill | date:'dd-MM-yyyy HH:mm a'}}</td>
                 <td class="announcement">{{data.appCodes[0].appCode}}</td>
-                <td class="announcement"><span ng-repeat="data in data.regionCode">{{data}},</span></td>
+                <td class="announcement"><span ng-repeat="data in data.regionCode">{{data}} </span></td>
                 <td class="announcement">{{data.createdOn | date:'dd-MM-yyyy HH:mm a'}}</td>
                 <td class="announcement">{{data.count}}</td>
-                <td class="announcement" ng-hide="{{data.type=='system' || state.campaignState=='completed' || state.campaignState=='stopped'}}" colspan="1">
-                    <a href="#/notification/{{data._id}}">Edit</a>
+                <td class="announcement" ng-hide="{{data.type=='system' || state.campaignState=='completed' || state.campaignState=='stopped'}}">
+                    <a href="#/announcement/{{data._id}}">Edit</a>
                 </td>
-                <td class="announcement" ng-hide="{{data.type=='system' || state.campaignState=='completed' || state.campaignState=='stopped'}}" colspan="2"><button>Stop</button></td>
+                <td class="announcement" ng-hide="{{data.type=='system' || state.campaignState=='completed' || state.campaignState=='stopped'}}"><button>Stop</button></td>
             </tr>
         </tbody>
     </table>
