--- a/views/viewCampaigns.html
+++ b/views/viewCampaigns.html
@@ -1,25 +1,17 @@
 <div ng-include="'views/dashboard.html'"></div>
 <div class="container announcement-container" ng-controller="ViewCampaignsCtrl">
-<!-- <div class="tgt_states_buttons btn-group">
-            <button class="btn">All</button>
-            <a href="javascript:void(0);" ng-model="scheduled" ng-click="getAllCampaigns(state.campaignState)" class="btn">Scheduled <span ng-show="state.campaignState=='scheduled'">{{campaigns.data.length}}</span></a>
-            <a href="javascript:void(0);" ng-model="running" ng-click="getAllCampaigns(state.campaignState)" class="btn">Running <span ng-show="state.campaignState=='running'">{{campaigns.data.length}}</span></a>
-            <a href="javascript:void(0);" ng-model="completed" ng-click="getAllCampaigns(state.campaignState)" class="btn">Completed <span ng-show="state.campaignState=='completed'">{{campaigns.data.length}}</span></a>
-            <a href="javascript:void(0);" ng-model="stopped" ng-click="getAllCampaigns(state.campaignState)" class="btn active">Stopped <span ng-show="state.campaignState=='stopped'" >{{campaigns.data.length}}</span></a>
-        </div> -->
-        <div class="row">
-            <div class="col-xs-6">
-                <label for="search">Filter Campaign:</label>
-                <br>
-                <select class="btn btn-default" ng-model="state.campaignState" ng-options="v for v in state.campaignStatus"></select>
-                <button type="submit" ng-click="getAllCampaigns(state.campaignState)">Go</button>
-            </div>
-            <div class="col-xs-6">
-                <label for="search">Search:</label>
-                <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
-            </div>
+    <div class="row">
+        <div class="col-xs-6">
+            <label for="search">Filter Campaign:</label>
+            <br>
+            <select class="btn btn-default" ng-model="state.campaignState" ng-options="v for v in state.campaignStatus"></select>
+            <button type="submit" ng-click="getAllCampaigns(state.campaignState)">Go</button>
         </div>
-      
+        <div class="col-xs-6">
+            <label for="search">Search:</label>
+            <input ng-model="q" id="search" class="form-control" placeholder="Filter text">
+        </div>
+    </div>
     <table class="announcement MT15" style="width:131%">
         <thead>
             <th class="announcement">Message Id</th>
@@ -31,7 +23,7 @@
             <th class="announcement">Region</th>
             <th class="announcement">Created On</th>
             <th class="announcement">Messages Sent</th>
-            <th class="announcement" colspan="2" ng-show="state.campaignState=='all' || state.campaignState=='scheduled'">Action</th>
+            <th class="announcement" colspan="2">Action</th>
         </thead>
         <tbody>
             <tr dir-paginate="data in campaigns.data | filter:q | itemsPerPage: pageSize" current-page="currentPage" class="announcement">
@@ -40,18 +32,21 @@
                 <td class="announcement">{{data.type}}</td>
                 <td class="announcement">{{data.validFrom | date:'dd-MM-yyyy HH:mm a'}}</td>
                 <td class="announcement">{{data.validTill | date:'dd-MM-yyyy HH:mm a'}}</td>
+                <!-- <td class="announcement">{{data.validTill > currentTime}}</td> -->
                 <td class="announcement">{{data.appCodes[0].appCode}}</td>
                 <td class="announcement"><span ng-repeat="data in data.regionCode">{{data}} </span></td>
                 <td class="announcement">{{data.createdOn | date:'dd-MM-yyyy HH:mm a'}}</td>
                 <td class="announcement">{{data.count}}</td>
                 <td class="announcement">
-                    <a ng-show="data.memberEmail == null && (state.campaignState=='all' || state.campaignState=='scheduled') && !data.isStopped" href="#/announcement/{{data._id}}">Edit</a>&nbsp;
+                    <a ng-show="data.memberEmail == null && !data.isStopped && data.validTill > currentTime" href="#/announcement/{{data._id}}">Edit</a>&nbsp;&nbsp;&nbsp;&nbsp;
                 </td>
-                <td class="announcement" ng-show="data.memberEmail == null && (state.campaignState=='all' || state.campaignState=='scheduled')"><button class="btn btn-info" ng-disabled="data.isStopped==true" ng-click="stopCampaign(data)">Stop</button></td>
+                <td class="announcement" ng-show="data.memberEmail == null">
+                    <button class="btn btn-info" ng-disabled="data.isStopped==true || data.validTill < currentTime" ng-click="stopCampaign(data)">Stop</button>
+                </td>
             </tr>
         </tbody>
     </table>
-    <div ng-controller="OtherController" >
+    <div ng-controller="OtherController">
         <div class="text-center">
             <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)" template-url="dirPagination.tpl.html"></dir-pagination-controls>
         </div>
