--- a/views/notification.html
+++ b/views/notification.html
@@ -114,7 +114,11 @@
                 <td>
                     <select class="btn btn-default" ng-model='notification.data[0].appCodes[0].appCode'>
                         <option value="WEBIN">WEBIN</option>
-                        <option value="M4">M4</option>
+                        <option value="MOBAND2">MOBAND2</option>
+                        <option value="WEB">WEB</option>
+                        <option value="WEBTOUCH">WEBTOUCH</option>
+                        <option value="MOBIOS3">MOBIOS3</option>
+                        <option value="MOBWIN10">MOBWIN10</option>
                     </select>
                 </td>
             </tr>
