--- a/views/announcement.html
+++ b/views/announcement.html
@@ -1,13 +1,157 @@
 <div ng-include="'views/dashboard.html'"></div>
 <div class='container announcement-container' ng-controller='AnnouncementCtrl'>
-    <table class="table">
+    <form ng-submit="update(announcement)">
+        <table class="table MT15">
+            <thead>
+                <tr>
+                    <th style="padding-right: 7%;">
+                        <label for="campaign">Campaign_Name <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <input type="text" maxlength="30" class="form-control" ng-model='announcement.campaign' placeholder="Campaign Name" ng-disabled="true" required>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="type">CardType:</label>
+                    </th>
+                    <td>
+                        <select class="btn btn-default" ng-model="announcement.cardType" ng-options="v for v in selectType.messageCardTypeValues"></select>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="shortTxt">Title <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <input type="text" maxlength="30" class="form-control" ng-model='announcement.shortTxt' placeholder="Short Text" required>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="imgURL">Icon URL:</label>
+                    </th>
+                    <td>
+                        <input type="url" class="form-control" ng-model='announcement.imgURL' placeholder="Image Url" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="longTxt">Message <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <textarea "text" maxlength="200" class="form-control" ng-model='announcement.longTxt' placeholder="Long Text" required>
+                        </textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="sequence">Priority:</label>
+                    </th>
+                    <td>
+                        <input type="number" class="form-control" placeholder="sequence" ng-model='announcement.sequence' ng-blur="limmiter()" min="0" max="5" />
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="type">Sender:</label>
+                    </th>
+                    <td>
+                        <select class="btn btn-default" ng-model="announcement.type" ng-options="v for v in selectType.systemTypeValues"></select>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="validFrom" style='margin-bottom: 20%;'>Valid From <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <p id='red' ng-show="show">The minimum difference between Valid From & Valid Till must be 5hrs and 50 minutes</p>
+                        <div class="dropdown form-group">
+                            <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
+                                <div class="input-group date">
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" ng-click="showWarning()" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" readonly required="true">
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                </div>
+                            </a>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                <datetimepicker data-ng-model="dateRangeStart" data-datetimepicker-config="{ dropdownSelector: '#dropdownStart', renderOn: 'end-date-changed' }" data-on-set-time="startDateOnSetTime()" data-before-render="startDateBeforeRender($dates)"></datetimepicker>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label style='margin-bottom: 16%;' for="validTill">Valid Till <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <div class="dropdown form-group">
+                            <a class="dropdown-toggle" id="dropdownEnd" role="button" data-toggle="dropdown" data-target="#" href="#">
+                                <div class="input-group date">
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" class="form-control" data-ng-model="dateRangeEnd" placeholder="Valid Till" readonly>
+                                    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                                </div>
+                            </a>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+                                <datetimepicker data-ng-model="dateRangeEnd" data-datetimepicker-config="{ dropdownSelector: '#dropdownEnd', renderOn: 'start-date-changed' }" data-on-set-time="endDateOnSetTime()" data-before-render="endDateBeforeRender($view, $dates, $leftDate, $upDate, $rightDate)"></datetimepicker>
+                            </ul>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="regionCode">Region code <span id="red">*</span>:</label>
+                    </th>
+                    <td>
+                        <div class="demo-section k-content">
+                            <select kendo-multi-select k-options="selectOptions" k-ng-model="selectedIds" ng-model='announcement.regionCode'>
+                            </select>
+                        </div>
+                    </td>
+                </tr>
+                <tr ng-show="announcement.cardType == 'PlainText with CTA'">
+                    <th>
+                        <label for="text">Primary CTA text:</label>
+                    </th>
+                    <td>
+                        <input type="text" Maxlength="10" class="form-control" ng-model='announcement.appCodes[0].callToAction[0].text' placeholder="Text" />
+                    </td>
+                </tr>
+                <tr ng-show="announcement.cardType == 'PlainText with CTA'">
+                    <th>
+                        <label for="link">Primary CTA Link:</label>
+                    </th>
+                    <td>
+                        <input type="url" class="form-control" ng-model='announcement.appCodes[0].callToAction[0].link' class="link" placeholder="Link" />
+                    </td>
+                </tr>
+                <tr ng-show="announcement.cardType == 'PlainText with CTA'">
+                    <th>
+                        <label for="target">Link Target:</label>
+                    </th>
+                    <td>
+                        <select class="btn btn-default" ng-model="announcement.appCodes[0].callToAction[0].target" ng-options="v for v in selectType.targetTypeValues"></select>{{announcement.appCodes[0].callToAction[0].target}}
+                    </td>
+                </tr>
+                <tr>
+                    <th>
+                        <label for="appCode">Appcode:</label>
+                    </th>
+                    <td>
+                        <select class="btn btn-default" ng-model="announcement.appCodes[0].appCode" ng-options="v for v in selectType.appCodeTypeValues"></select>
+                    </td>
+                </tr>
+            </thead>
+        </table>
+        <button type="submit" class="btn btn-success">Update</button>
+    </form>
+    <!--     <table class="table">
         <thead>
             <tr>
                 <th>
                     <label for="campaign">Campaign Name <span id="red">*</span>:</label>
                 </th>
                 <td>
-                    <input type="text" maxlength="30" class="form-control" ng-model='announcement.data[0].campaign' placeholder="Campaign Name">
+                    <input type="text" maxlength="30" class="form-control" ng-model='announcement.campaign' placeholder="Campaign Name">
                 </td>
             </tr>
             <tr>
@@ -15,7 +159,7 @@
                     <label for="shortTxt">Subject <span id="red">*</span>:</label>
                 </th>
                 <td>
-                    <input type="text" maxlength="30" class="form-control" ng-model='announcement.data[0].shortTxt' placeholder="Short Text">
+                    <input type="text" maxlength="30" class="form-control" ng-model='announcement.shortTxt' placeholder="Short Text">
                 </td>
             </tr>
             <tr>
@@ -23,7 +167,7 @@
                     <label for="imgURL">Image URL:</label>
                 </th>
                 <td>
-                    <input type="url" class="form-control" ng-model='announcement.data[0].imgURL' placeholder="Image Url" />
+                    <input type="url" class="form-control" ng-model='announcement.imgURL' placeholder="Image Url" />
                 </td>
             </tr>
             <tr>
@@ -31,7 +175,7 @@
                     <label for="longTxt">Message <span id="red">*</span>:</label>
                 </th>
                 <td>
-                    <textarea maxlength="200" class="form-control" ng-model='announcement.data[0].longTxt' placeholder="Long Text">
+                    <textarea maxlength="200" class="form-control" ng-model='announcement.longTxt' placeholder="Long Text">
                     </textarea>
                 </td>
             </tr>
@@ -40,7 +184,7 @@
                     <label for="sequence">Sequence:</label>
                 </th>
                 <td>
-                    <input type="number" class="form-control" ng-model='announcement.data[0].sequence' ng-blur="limmiter()" placeholder="sequence" min="0" max="99" />
+                    <input type="number" class="form-control" ng-model='announcement.sequence' ng-blur="limmiter()" placeholder="sequence" min="0" max="99" />
                 </td>
             </tr>
             <tr>
@@ -48,7 +192,7 @@
                     <label for="type">Type:</label>
                 </th>
                 <td>
-                    <select class="btn btn-default" ng-model='announcement.data[0].type'>
+                    <select class="btn btn-default" ng-model='announcement.type'>
                         <option value="BACKOFFICE">BACKOFFICE</option>
                         <option value="system">SYSTEM </option>
                     </select>
@@ -97,7 +241,7 @@
                 </th>
                 <td>
                     <div class="demo-section k-content">
-                        <select kendo-multi-select k-options="selectOptions" k-ng-model="selectedIds" ng-model='announcement.data[0].regionCode'>
+                        <select kendo-multi-select k-options="selectOptions" k-ng-model="selectedIds" ng-model='announcement.regionCode'>
                         </select>
                     </div>
                 </td>
@@ -107,7 +251,7 @@
                     <label for="appCode">Appcode:</label>
                 </th>
                 <td>
-                    <select class="btn btn-default" ng-model='announcement.data[0].appCodes[0].appCode'>
+                    <select class="btn btn-default" ng-model='announcement.appCodes[0].appCode'>
                         <option value="WEBIN">WEBIN</option>
                         <option value="MOBAND2">MOBAND2</option>
                         <option value="WEB">WEB</option>
@@ -122,7 +266,7 @@
                     <label for="text">CallToActionText:</label>
                 </th>
                 <td>
-                    <input type="text" maxlength="10" class="form-control" ng-model='announcement.data[0].appCodes[0].callToAction[0].text' placeholder="text" />
+                    <input type="text" maxlength="10" class="form-control" ng-model='announcement.appCodes[0].callToAction[0].text' placeholder="text" />
                 </td>
             </tr>
             <tr>
@@ -130,7 +274,7 @@
                     <label for="link">CallToActionLink:</label>
                 </th>
                 <td>
-                    <input type="text" class="form-control" ng-model='announcement.data[0].appCodes[0].callToAction[0].link' class="link" placeholder="link" />
+                    <input type="text" class="form-control" ng-model='announcement.appCodes[0].callToAction[0].link' class="link" placeholder="link" />
                 </td>
             </tr>
             <tr>
@@ -138,7 +282,7 @@
                     <label for="target">Target:</label>
                 </th>
                 <td>
-                    <select class="btn btn-default" ng-model='announcement.data[0].appCodes[0].callToAction[0].target'>
+                    <select class="btn btn-default" ng-model='announcement.appCodes[0].callToAction[0].target'>
                         <option value="_blank">New Window </option>
                         <option value="_self">Same Window</option>
                     </select>
@@ -146,5 +290,5 @@
             </tr>
         </thead>
     </table>
-    <button type="button" class="btn btn-success" ng-click="update(announcement)">Update</button>
+    <button type="button" class="btn btn-success" ng-click="update(announcement)">Update</button> -->
 </div>
