--- a/views/announcement.html
+++ b/views/announcement.html
@@ -4,11 +4,11 @@
         <table class="table MT15">
             <thead>
                 <tr>
-                    <th style="padding-right: 7%;">
-                        <label for="campaign">Campaign_Name <span id="red">*</span>:</label>
+                    <th>
+                        <label for="campaign">CampaignName<span id="red"> *</span>:</label>
                     </th>
                     <td>
-                        <input type="text" maxlength="30" class="form-control" ng-model='announcement.campaign' placeholder="Campaign Name" ng-disabled="true" required>
+                        <input type="text" maxlength="30" class="form-control" ng-model='announcement.campaign' placeholder="Campaign Name" readonly required>
                     </td>
                 </tr>
                 <tr>
@@ -69,7 +69,7 @@
                         <div class="dropdown form-group">
                             <a class="dropdown-toggle" id="dropdownStart" role="button" data-toggle="dropdown" data-target="#" href="#">
                                 <div class="input-group date">
-                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" ng-click="showWarning()" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" readonly required="true">
+                                    <input data-date-time-input="YYYY-MMM-DD hh:mm:ss a" type="text" ng-click="showWarning()" class="form-control" data-ng-model="dateRangeStart" placeholder="Valid From" required="true" readonly> 
                                     <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
                                 </div>
                             </a>
@@ -129,7 +129,7 @@
                         <label for="target">Link Target:</label>
                     </th>
                     <td>
-                        <select class="btn btn-default" ng-model="announcement.appCodes[0].callToAction[0].target" ng-options="v for v in selectType.targetTypeValues"></select>{{announcement.appCodes[0].callToAction[0].target}}
+                        <select class="btn btn-default" ng-model="announcement.appCodes[0].callToAction[0].target" ng-options="v for v in selectType.targetTypeValues"></select>
                     </td>
                 </tr>
                 <tr>
