--- a/views/new.html
+++ b/views/new.html
@@ -2,11 +2,11 @@
 <div class='container announcement-container' ng-controller="NewCtrl">
     <div class="row MT15">
         <div class="col-md-3">
-            <input type="radio" id="announcement" ng-model="messageType.name" value="announcement" ng-click="toggleState(messageType)">
+            <input type="radio" id="announcement" ng-model="messageType.name" value="announcement" ng-change="toggleState(messageType)">
             <label for="announcement"><span></span> Announcement </label>
         </div>
         <div class="col-md-3">
-            <input type="radio" id="notification" ng-model="messageType.name" value="notification" ng-click="toggleState(messageType)">
+            <input type="radio" id="notification" ng-model="messageType.name" value="notification" ng-change="toggleState(messageType)">
             <label for="notification"><span></span> Notification </label>
         </div>
     </div>
@@ -14,8 +14,8 @@
         <table class="table MT15">
             <thead>
                 <tr>
-                    <th style="padding-right: 7%;">
-                        <label for="campaign">Campaign_Name <span id="red">*</span>:</label>
+                    <th>
+                        <label for="campaign">CampaignName<span id="red"> *</span>:</label>
                     </th>
                     <td>
                         <input type="text" maxlength="30" class="form-control" ng-model='message.campaign' placeholder="Campaign Name" ng-blur="checkCampaign()" required>
@@ -67,7 +67,9 @@
                         <label for="type">Sender:</label>
                     </th>
                     <td>
-                        <select class="btn btn-default" ng-model="selectType.systemTypeValue" ng-options="v for v in selectType.systemTypeValues"></select>
+                        <select class="btn btn-default">
+                            <option ng-value="systemTypeValue.name" selected>{{systemTypeValue.name}}</option>
+                        </select>
                     </td>
                 </tr>
                 <tr>
@@ -118,7 +120,7 @@
                         </div>
                     </td>
                 </tr>
-                <tr id="text">
+                <tr ng-show="selectType.messageCardTypeValue == 'PlainText with CTA'">
                     <th>
                         <label for="text">Primary CTA text:</label>
                     </th>
@@ -126,7 +128,7 @@
                         <input type="text" Maxlength="10" class="form-control" ng-model='appCodefield.text' placeholder="Text" />
                     </td>
                 </tr>
-                <tr id="link">
+                <tr ng-show="selectType.messageCardTypeValue == 'PlainText with CTA'">
                     <th>
                         <label for="link">Primary CTA Link:</label>
                     </th>
@@ -134,7 +136,7 @@
                         <input type="url" class="form-control" ng-model='appCodefield.link' class="link" placeholder="Link" />
                     </td>
                 </tr>
-                <tr id="target">
+                <tr ng-show="selectType.messageCardTypeValue == 'PlainText with CTA'">
                     <th>
                         <label for="target">Link Target:</label>
                     </th>
