files renamed for readability

--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -48,7 +48,7 @@
             </li>
             <ul class="submenu-option tooltip-right">
                 <!-- <li class=""><a href="javascript:void(0)">Create Campaigns</a></li> -->
-                <li ng-class="{active : isRouteActive('/new')}"><a href="#/new" class=""><i class="fa fa-paper-plane"></i> Create Campaigns</a></li>
+                <li ng-class="{active : isRouteActive('/createCampaign')}"><a href="#/createCampaign" class=""><i class="fa fa-paper-plane"></i> Create Campaign</a></li>
             </ul>
         </ul>
         <div class="clearfix"></div>
